# typecast-sdk

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD-PARTY-LICENSES.txt  composer.json  zig_json_test
.cursor/rules/: sdk-development.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage-c.yml  coverage-csharp.yml  coverage-go.yml  coverage-java.yml  coverage-js.yml  coverage-kotlin.yml  coverage-python.yml  coverage-rust.yml  coverage-swift.yml  coverage-template.yml  publish-js.yml  sync-typecast-php.yml
docs/: coverage-policy.md  generate-to-file.md
scripts/: check_quick_cloning_consistency.py  check_with_timestamps_consistency.py  update-third-party-licenses.sh
streaming-integration-test/: Cargo.toml  TestJava.java  TestKotlin.kt  go.mod  test_c.c  test_csharp.cs  test_go.go  test_js.mjs  test_python.py  test_rust.rs  test_swift.swift
streaming-integration-test/csharp-test/: Program.cs  csharp-test.csproj
streaming-integration-test/kotlin-test/: build.gradle.kts  settings.gradle.kts
streaming-integration-test/swift-test/: Package.swift
test-fixtures/mock-server/: README.md  package-lock.json  package.json  tsconfig.json
test-fixtures/quick-cloning/: README.md  error_file_too_large.json  success_v21.json  success_v30.json
test-fixtures/with-timestamps/: README.md  both.json  char_only.json  jpn_char.json  word_only.json
typecast-c/: CMakeLists.txt  Dockerfile.test.windows  LICENSE  Makefile  README.md  coverage-summary.txt  coverage.filtered.info  coverage.info
typecast-c/cmake/: aarch64-linux-gnu.cmake  arm-linux-gnueabihf.cmake  typecastConfig.cmake.in
typecast-c/examples/: quick_cloning.c  simple.c  with_timestamps.c
typecast-c/include/: typecast.h
typecast-c/scripts/e2e/: run_e2e.sh  test_e2e.c
typecast-c/src/: cJSON.c  cJSON.h  typecast.c
typecast-c/tests/: test_composer.c  test_integration.c  test_main.c  test_mock.c  test_quick_cloning.c  test_timestamps.c
typecast-csharp/: .env.example  Directory.Build.props  LICENSE  Makefile  README.md  Typecast.sln  coverlet.runsettings
typecast-dart/: .env.example  CHANGELOG.md  LICENSE  Makefile  README.md  analysis_options.yaml  dart_test.yaml  pubspec.yaml
typecast-dart/example/: quick_cloning.dart  tts.dart  with_timestamps.dart
typecast-dart/lib/: typecast.dart  typecast_dart.dart
typecast-dart/test/: composer_test.dart  e2e_test.dart  timestamps_test.dart  typecast_client_test.dart
typecast-dart/tool/: check_coverage.dart
typecast-go/: LICENSE  Makefile  README.md  client.go  client_e2e_test.go  client_generate_to_file.go  client_test.go  client_unit_test.go  client_voice_cloning.go  composer.go  composer_test.go  errors.go  go.mod  models.go  quick_cloning_test.go  timestamps.go  timestamps_e2e_test.go  timestamps_test.go
typecast-java/: .env.example  Makefile  PUBLISHING.md  README.md  pom.xml
typecast-js/: .env.example  .eslintrc.json  .gitignore  .npmignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  hello.srt  hello.vtt  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vite.config.ts
typecast-js/examples/: README.md  package.json  quick-cloning.ts  simple.ts  ssfm-v30-test.ts  tsconfig.json  with-timestamps.ts
typecast-js/scripts/: test-package.sh
typecast-js/src/: client.ts  composer.ts  errors.ts  index.ts
typecast-js/test/: client.test.ts  integration.tts.test.ts  integration.voices.test.ts
typecast-kotlin/: .env.example  Makefile  PUBLISHING.md  README.md  build.gradle.kts  gradlew  settings.gradle.kts
typecast-php/: .env.example  .gitignore  README.md  composer.json
typecast-php/examples/: quick-cloning.php  tts.php  with_timestamps.php
typecast-php/src/: SpeechComposer.php  TypecastClient.php
typecast-python/: .env.example  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  hello.srt  hello.vtt  pyproject.toml
typecast-python/docker/: Dockerfile
typecast-python/examples/: advanced.py  async_example.py  quick_cloning.py  simple.py  ssfm_v30_test.py  voices_example.py  with_timestamps.py
typecast-python/src/typecast/: __init__.py  _httpx_compat.py  _user_agent.py  _voice_clone.py  async_client.py  client.py  composer.py  conf.py  sse.py  websocket.py
typecast-python/src/typecast/models/: __init__.py  subscription.py  tts.py  voices.py
typecast-python/tests/: conftest.py  integration_smoke_test.py  smoke_test.py  test_error_handling.py  test_integration_voices.py  test_mock_tts.py
typecast-python/tests/e2e/: test_async_client_real.py  test_integration_tts.py  test_quick_cloning_real.py  test_with_timestamps_real.py
typecast-python/tests/unit/: test_async_client.py  test_client.py  test_composer.py  test_conf.py  test_error_handling.py  test_exceptions.py  test_httpx_compat.py  test_language_code.py  test_quick_cloning.py  test_sse.py  test_user_agent.py  test_utils.py  test_websocket.py  test_with_timestamps.py
typecast-ruby/: Makefile  README.md  Rakefile  THIRD-PARTY-LICENSES.md  typecast-ruby.gemspec
typecast-ruby/examples/: quick_cloning.rb  tts.rb  with_timestamps.rb
typecast-ruby/lib/: typecast.rb
typecast-ruby/test/: all_test.rb  client_test.rb  composer_test.rb  e2e_test.rb  timestamps_test.rb
typecast-rust/: Cargo.toml  LICENSE  Makefile  README.md
typecast-rust/examples/: quick_cloning.rs  with_timestamps.rs
typecast-rust/src/: client.rs  composer.rs  errors.rs  lib.rs  models.rs  timestamps.rs
typecast-rust/tests/: e2e_test.rs  integration_test.rs  quick_cloning.rs  timestamps_test.rs  unit_test.rs
typecast-swift/: .env.example  LICENSE  Makefile  Package.swift  README.md
typecast-swift/scripts/: example.swift  test.sh
typecast-zig/: README.md  build.zig  build.zig.zon
typecast-zig/examples/: quick_cloning.zig  tts.zig  with_timestamps.zig
typecast-zig/src/: client.zig  composer.zig  json.zig  models.zig  root.zig  timestamps.zig
typecast-zig/tests/: composer_test.zig  integration_test.zig  mock_test.zig  quick_cloning_test.zig  (+2 more)
(+318 files in other folders)
