[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typecast-python"
version = "0.3.11"
description = "Official Typecast Python SDK - Convert text to lifelike speech using AI-powered voices"
authors = [
    {name = "Neosapience", email = "help@typecast.ai"}
]
maintainers = [
    {name = "Neosapience", email = "help@typecast.ai"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8,<3.15"
keywords = ["typecast", "tts", "text-to-speech", "ai", "voice", "audio", "speech-synthesis", "voice-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.14.1; python_version >= '3.10'",
    "requests>=2.33.0; python_version >= '3.10'",
    "httpx>=0.28.1,<1; python_version < '3.10'",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-cov>=5.0.0,<8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=1.4.0,<2.0.0",
    "aioresponses>=0.7.6",
    "httpx>=0.28.1,<1.0.0",
    "black>=26.3.1,<27.0.0",
    "flake8>=5.0.0,<8.0.0",
    "mypy>=1.0.0,<2.4.0",
    "isort>=5.0.0",
]

[project.urls]
Homepage = "https://typecast.ai"
Documentation = "https://typecast.ai/docs/overview"
Repository = "https://github.com/neosapience/typecast-sdk/tree/main/typecast-python"
Issues = "https://github.com/neosapience/typecast-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/typecast"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
]
exclude = [
    "/.env*",
    "/tests",
    "/examples",
    "/spec",
    "/docker",
    "*.lock",
    "/Makefile",
    "/MANIFEST.in",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-cov>=5.0.0,<8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=1.4.0,<2.0.0",
    "aioresponses>=0.7.6",
    "httpx>=0.28.1,<1.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "ruff>=0.14.0",
]

[tool.uv]
environments = ["python_version >= '3.10'"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests against the real Typecast API (require credentials)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["src/typecast"]
omit = [
    "*/tests/*",
    "*/examples/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
