[package]
name = "typecast-rust"
version = "0.1.0"
edition = "2021"
authors = ["Neosapience <help@typecast.ai>"]
description = "Official Rust SDK for Typecast Text-to-Speech API"
license = "MIT"
repository = "https://github.com/neosapience/typecast-sdk/tree/main/typecast-rust"
homepage = "https://typecast.ai/docs"
documentation = "https://docs.rs/typecast-rust"
keywords = ["tts", "text-to-speech", "typecast", "voice", "ai"]
categories = ["api-bindings", "multimedia::audio"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
dotenvy = "0.15"
