[package]
name = "typecast-rust"
version = "0.2.0"
edition = "2021"
authors = ["Neosapience <help@typecast.ai>"]
description = "Official Rust SDK for Typecast Text-to-Speech API"
license = "MIT"
repository = "https://github.com/neosapience/typecast-sdk/tree/main/typecast-rust"
homepage = "https://typecast.ai/docs"
documentation = "https://docs.rs/typecast-rust"
keywords = ["tts", "text-to-speech", "typecast", "voice", "ai"]
categories = ["api-bindings", "multimedia::audio"]
readme = "README.md"

[features]
default = []
# Enable end-to-end tests that hit the real Typecast API
# (requires TYPECAST_API_KEY). Default `cargo test` skips these.
e2e = []

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
tokio-test = "0.4"
dotenvy = "0.15"
mockito = "1.5"
